--- a/app/globals.css
+++ b/app/globals.css
@@ -2,5 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
+.main__container {
+    scroll-snap-type: y mandatory;
+    overflow: scroll;
+    height: 100vh;
+}
+
+section {
+    scroll-snap-align: start;
+}
 
