--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,11 @@
 }
 
 .home, #projects, #skills  {
-    background: rgb(2,0,36);
-    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(75,9,121,1) 100%);
+    /* background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(75,9,121,1) 100%); */
+    background: rgb(0,0,0);
+background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(43,4,150,1) 97%);
+
 }
 .tech__container {
   position: relative;
