--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   padding: 0;
 }
 
-.home, #projects, #skills  {
+.home, #projects, #skills, #about  {
     /* background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(75,9,121,1) 100%); */
     background: rgb(0,0,0);
