--- a/app/globals.css
+++ b/app/globals.css
@@ -8,33 +8,33 @@
   padding: 0;
 }
 
-.home, #projects, #skills, #about  {
-    /* background: rgb(2,0,36);
-    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(75,9,121,1) 100%); */
-    background: rgb(0,0,0);
-background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(43,4,150,1) 97%);
-
-}
-.tech__container {
-  position: relative;
-  z-index: 10;
-  background: rgb(13,4,150);
-  background: radial-gradient(circle, rgba(13,4,150,1) 0%, rgba(75,9,121,1) 100%);
-}
-.tech__section__intro {
-  position: relative;
-  z-index: 999;
-  background: rgb(43,4,150);
-  background: linear-gradient(0deg, rgba(43,4,150,1) 0%, rgba(75,9,121,1) 100%);
-}
-.project__card{
-    background-color: rgb(30 41 59)
-}
 .main__container {
   scroll-snap-type: y mandatory;
   overflow: scroll;
   height: 100vh;
+  background: rgb(0,0,0);
+  background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(43,4,150,1) 97%);
 }
+.tech__container {
+  position: relative;
+  z-index: 10;
+  background: rgb(14,8,200);
+background: radial-gradient(circle, rgba(14,8,200,1) 0%, rgba(0,0,0,1) 97%);
+}
+.about__me, .about__me__intro {
+  background: rgb(14,8,200);
+background: radial-gradient(circle, rgba(14,8,200,1) 0%, rgba(0,0,0,1) 97%);
+}
+.tech__section__intro {
+  position: relative;
+  z-index: 999;
+  background: rgb(14,8,200);
+background: radial-gradient(circle, rgba(14,8,200,1) 0%, rgba(0,0,0,1) 97%);
+}
+.project__card{
+    background-color: rgb(30 41 59);
+}
+
 
 section {
   scroll-snap-align: start;
