--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
 background: radial-gradient(circle, rgba(14,8,200,1) 0%, rgba(0,0,0,1) 97%);
 }
 
-.about__me, .about__me__intro {
+.about__me, .about__me__intro, .project__details{
   background: rgb(14,8,200);
 background: radial-gradient(circle, rgba(14,8,200,1) 0%, rgba(0,0,0,1) 97%);
 }
@@ -31,9 +31,6 @@ background: radial-gradient(circle, rgba(14,8,200,1) 0%, rgba(0,0,0,1) 97%);
   z-index: 999;
   background: rgb(14,8,200);
 background: radial-gradient(circle, rgba(14,8,200,1) 0%, rgba(0,0,0,1) 97%);
-}
-.project__card{
-    background-color: rgb(30 41 59);
 }
 
 
